@@ -1,5 +1,10 @@
 h1. CHANGELOG
 
+h2. 1.1.2 February 12, 2012
+
+* fix Twitter Bootstrap in the 'html5' recipe
+* warn that 'rails-footnotes' is SLOW in the 'extras' recipe
+
 h2. 1.1.1 February 4, 2012
 
 * bugfix in 'rspec' recipe: call machinist:install generator
